# mono-whitepaper

./: Cargo.toml  README.md  build-cli.sh  run-network.sh
src/mono/lib/: lib.rs
src/mono/lib/blockchain/: mod.rs
src/mono/lib/network/: mod.rs  nodes.rs
src/mono/lib/time/: mod.rs
