[package]
name = "mono-whitepaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/cli/bin/main.rs"

[[bin]]
name = "mono"
path = "src/mono/bin/main.rs"

[lib]
name = "mono_api"
path = "src/mono/lib/lib.rs"
test = true
doctest = false
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
sha256 = "1.0.3"
